2011-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* barwitherr.m: added.  generates bar plots *with* errorbars.
	* cprintf.m: added.  generates color-definable text output to stdout, stderr.

2011-06-13  Jeremy Cribb <jcribb@email.unc.edu>
	* edge_detector_1d:  added Brian Eastwoods edge_detector_1d code to 3dfmAnalysis for 2 reasons.  One: I need to slightly modify it.  Two:  It will make everything in 3dfmAnalysis work without a separate checkout of edge_detector_1d.

2011-06-13  Jeremy Cribb <jcribb@email.unc.edu>
	* twopoint:  added.  author-sanctioned two-point microrheology code from Maria Kilfoil's web page that implements Crocker's 2pt algorithm.

2011-01-13  Jeremy Cribb <jcribb@email.unc.edu>
	* plot2svg/plot2svg.m: quieted the annoying announcement string that printed everytime this function ran.
	* plot2svg/plot2svg_2d.m: same.

2009-04-29  Jeremy Cribb <jcribb@email.unc.edu>
	* rdir.m: added.  recursive directory utility. obtained from matlabcentral.
	* rdirExec.m: added.  recursive directory utility with execution.obtained from matlabcentral.

2008-10-14  Jeremy Cribb <jcribb@email.unc.edu>
	* plotxx.m: added.  obtained from http://www.mathworks.com/matlabcentral/fileexchange/loadFile.do?objectId=317

2008-07-08  Jeremy Cribb <jcribb@email.unc.edu>
	* .cvsignore: added so that cvs ignores .asv files.
	* plot2svg.m: from matlabcentral.  saves a figure as an svg (scalable vector graphics) file.
	* cell2num.m: from matlabcentral.  function that converts an all numeric cell array to a double precision array.
	* gridcolor.m: from matlabcentral.  hack that provides gridlines with different colors than black.
	
2007-11-09  Jeremy Cribb <jcribb@email.unc.edu>
	* circle.m:  external function that plots circles.

2007-04-10  Kalpit Desai <kvdesai@email.unc.edu>
	* savefig.m: external code that allows exporting .fig files into various image formats, with specified resolution. Very reliable. Needs Ghostscript in system path.
